--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="list">
                     Мои хобби:
                     <ul>
-                        <li>Кулинария</li>
-                        <li>Фильмы</li>
                         <li>Автомобили</li>
+                        <li>Фильмы</li>
+                        <li>Путешествия</li>
                     </ul>
                 </div>
             </div>
@@ -39,11 +39,6 @@
                     <th>Год</th>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Туман</td>
-                        <td>Кальянщик</td>
-                        <td>2019-2019</td>
-                    </tr>
                     <tr>
                         <td>WAYZUP</td>
                         <td>DJ</td>
